[package]
name = "fsgc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
glob = "0.3.0"
remove_dir_all = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
